# DataToolkit

./: .gitignore  .pypirc  README.md  __init__.py  config.json  data_toolkit.py  example_usage.py  pyproject.toml  requirements.txt  setup.py
DataToolkit/: __init__.py  performance_stats.py
Query2DataFrame/: data_toolkit.py
src/data_toolkit/: data_toolkit.py
src/querypanda/: __init__.py  performance_stats.py  querypanda.py
